# src/api/v1/payment/index.ts
@@ -1,17 +1,20 @@
 import express, { Request, Response } from "express";
 import PaymentMethodsModel from "../../../models/PaymentMethods.model";
+import { validateJwt } from "../../../utils";
 const router = express.Router();
 
-router.post("/paymentMethods", async (req: Request, res: Response) => {
+router.post("/payment", validateJwt, async (req: Request, res: Response) => {
   try {
-    const paymentMethod = await PaymentMethodsModel.create(req.body);
+    const paymentMethod = await PaymentMethodsModel.create({
+      name: req.body.name,
+    });
     res.status(201).json({ paymentMethod });
   } catch (error: any) {
     res.status(400).json({ error: error.message });
   }
 });
 
-router.get("/paymentMethods", async (req: Request, res: Response) => {
+router.get("/payment", validateJwt, async (req: Request, res: Response) => {
   try {
     const paymentMethods = await PaymentMethodsModel.find();
     res.status(200).json({ paymentMethods });
